# cpp-sfml-study

./: CMakeLists.txt  README.md
_notes/: setup.md  sfml-app-skeleton.cpp
src/: main.cpp
